Should be ready to print the flyer

--- a/flyer.tex
+++ b/flyer.tex
@@ -1,5 +1,5 @@
 \title{\textbf{The Basics of Git}\\A workshop on learning to use Version Control}
-\author{$LOCATION$}
+\author{Scott Lab E024}
 \date{Monday February 8, 2016\\7:00PM}
 \documentclass[12pt]{article}
 \usepackage[margin=0.75in]{geometry}
@@ -20,7 +20,7 @@
 	\maketitle
 	Have you ever gone to a hackathon and resorted to using a flashdrive after getting frustrated with version control? Have you started using Git and are just feeling lost? Do you just run the commands you're told with no understanding as to why? It's time to change all of that.\\
 	\linebreak
-	Come to $LOCATION$ on Monday, February 8th at 7PM to learn how simple Git can be. You'll be walked through how the terminology of Git and sdome of the workflows that are used everyday. Version Control is a necessity in industry, and this is a talk that can't be missed.\\
+	Come to Scott Lab E024 on Monday, February 8th at 7PM to learn how simple Git can be. You'll be walked through how the terminology of Git and sdome of the workflows that are used everyday. Version Control is a necessity in industry, and this is a talk that can't be missed.\\
 
 
 
