Recompiled on my system since stdlinux is missing packages

--- a/flyer.tex
+++ b/flyer.tex
@@ -17,7 +17,7 @@
 }
 
 \begin{document}
-	\maketitle
+	\maketitle\noindent
 	Have you ever gone to a hackathon and resorted to using a flashdrive after getting frustrated with version control? Have you started using Git and are just feeling lost? Do you just run the commands you're told with no understanding as to why? It's time to change all of that.\\
 	\linebreak
 	Come to Scott Lab E024 on Monday, February 8th at 7PM to learn how simple Git can be. You'll be walked through how the terminology of Git and sdome of the workflows that are used everyday. Version Control is a necessity in industry, and this is a talk that can't be missed.\\
