Added things people should bring to flyer

--- a/flyer.tex
+++ b/flyer.tex
@@ -2,7 +2,7 @@
 \author{Scott Lab E024}
 \date{Monday February 8, 2016\\7:00PM}
 \documentclass[12pt]{article}
-\usepackage[margin=0.75in]{geometry}
+\usepackage[margin=0.65in, top=.30in]{geometry}
 \usepackage{fancyhdr}
 \usepackage{arev}
 \usepackage[T1]{fontenc}
@@ -21,6 +21,13 @@
 	Have you ever gone to a hackathon and resorted to using a flashdrive after getting frustrated with version control? Have you started using Git and are just feeling lost? Do you just run the commands you're told with no understanding as to why? It's time to change all of that.\\
 	\linebreak
 	Come to Scott Lab E024 on Monday, February 8th at 7PM to learn how simple Git can be. You'll be walked through how the terminology of Git and sdome of the workflows that are used everyday. Version Control is a necessity in industry, and this is a talk that can't be missed.\\
+	\linebreak
+		\textbf{Please have}\\
+		\begin{itemize}
+			\item A system from which you can access Git(stdlinux has Git if you can SSH in)
+			\item A Github account (they're easy and free to make)
+			\item Optionally an SSH key setup with Github
+		\end{itemize}
 
 
 
